--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /TavalaExtension/bin/Debug/net5.0
+/TavalaExtension/obj
