--- a/TavalaExtension/TavalaExtension.csproj
+++ b/TavalaExtension/TavalaExtension.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DirectScale.Disco.Extension.Abstractions" Version="1.0.5214" />
+  </ItemGroup>
+
 </Project>
