Hooking up functionality

--- a/TavalaExtension/TavalaExtension.csproj
+++ b/TavalaExtension/TavalaExtension.csproj
@@ -5,15 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="DirectScale.Disco.Extension.Abstractions" Version="1.0.5214" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Hooks\Order\" />
     <Folder Include="Models\" />
-    <Folder Include="Services\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
